plugins {
    id 'java'
    id 'application'
    id 'distribution'
}

group = 'com.protonova'
version = '1.0-SNAPSHOT'

// Build and run against Java 21.
java {
    toolchain {
        languageVersion = JavaLanguageVersion.of(21)
    }
}

tasks.withType(JavaCompile).configureEach {
    options.release = 21
}

repositories {
    mavenCentral()
    maven { url = uri('https://jitpack.io') }
}

dependencies {
    // Library dependency
    implementation 'com.protonova:proto-nova-Library:1.0-SNAPSHOT'
    
    // Protobuf
    implementation 'com.google.protobuf:protobuf-java:3.25.5'
    
    // JSON and data
    implementation 'com.google.code.gson:gson:2.10.1'
    implementation 'org.json:json:20240303'
    implementation 'org.bouncycastle:bcprov-jdk18on:1.84'
    implementation 'org.bouncycastle:bcpkix-jdk18on:1.84'
    
    // Testing
    testImplementation 'junit:junit:4.13.2'
    
    // Class Graph
    implementation 'io.github.classgraph:classgraph:4.8.180'
}

application {
    mainClass = 'main.Main'
}

// Create Fat JAR with all dependencies
jar {
    if (project.hasProperty('packageOutputDir')) {
        destinationDirectory = file(project.property('packageOutputDir'))
    }
    duplicatesStrategy = DuplicatesStrategy.EXCLUDE
    exclude 'META-INF/*.SF', 'META-INF/*.RSA', 'META-INF/*.DSA'
    manifest {
        attributes(
            'Implementation-Title': project.name,
            'Implementation-Version': project.version,
            'Implementation-Vendor': 'Proto Nova',
            'Created-By': System.getProperty('java.version'),
            'Main-Class': 'main.Main'
        )
    }
    from {
        configurations.runtimeClasspath.collect { it.isDirectory() ? it : zipTree(it) }
    }
}
